--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,14 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+
+\Towers_of_Hanoi/build/
+\Towers_of_Hanoi/.idea/
+\Towers_of_Hanoi/out/
+
+\Towers_of_Hanoi/*.iml
+
+\Towers_of_Hanoi/nbproject/
+
+\Towers_of_Hanoi/*.xml
